Setup episodes_controller

--- a/app/views/episodes/index.html.erb
+++ b/app/views/episodes/index.html.erb
@@ -8,4 +8,5 @@
 	<% end %>
 </ul>
 
-<%= link_to "Create a New Episode", new_episode_path, class: "new_apisode" %>
+<br>
+<%= link_to "Post a New Episode", new_episode_path, class: "new_apisode" %>
